Isolate global settings and delegate responsibilities to business objects
Rather than allowing any child forms to access the global settings data set directly, the main from should provide an interface and handle updates to the acutal settings data.  In addition, much of the responsibility of working with the settings data itself should be delegated to business objects rather than handled by the form.

--- a/Tip Tracker/Tip Tracker.vbproj
+++ b/Tip Tracker/Tip Tracker.vbproj
@@ -255,6 +255,10 @@
     <Compile Include="GlobalDataSet.vb">
       <DependentUpon>GlobalDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Utilities\FileObfuscator.vb" />
+    <Compile Include="Utilities\GlobalFileDialogOptions.vb" />
+    <Compile Include="Utilities\GlobalSettings.vb" />
+    <Compile Include="Utilities\GlobalSettingsFile.vb" />
     <Compile Include="Utilities\MachineSettings.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
