--- a/Tip Tracker/Tip Tracker.vbproj
+++ b/Tip Tracker/Tip Tracker.vbproj
@@ -268,6 +268,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ServersLookupDataset.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Utilities\ObfuscatedDataSetFile.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmAbout.resx">
