--- a/UI.WinForms/UI.WinForms.vbproj
+++ b/UI.WinForms/UI.WinForms.vbproj
@@ -403,6 +403,10 @@
       <Project>{24627859-a07b-4e7c-9bcf-a5b30b2c58b0}</Project>
       <Name>Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{91e5a674-22e0-4a72-bb76-8bc318937da8}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FileUtility\FileUtility.vbproj">
       <Project>{e4750200-b940-4ae1-a0ac-7b9fd90481c8}</Project>
       <Name>FileUtility</Name>
