Add class to contain strongly-defined tip types
Rather than referring to tip types as string values, the strings will be encapsulated in a strongly-typed class.  Future development iterations will allow tip types to be defined by the users, so this is the first step in abstracting specific types.

--- a/UI.WinForms/UI.WinForms.vbproj
+++ b/UI.WinForms/UI.WinForms.vbproj
@@ -261,6 +261,7 @@
       <DependentUpon>ServersLookupDataset.xsd</DependentUpon>
     </Compile>
     <Compile Include="Utilities\SortableBindingList.vb" />
+    <Compile Include="Utilities\TipTypes.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmAbout.resx">
