Build out business objects

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -41,9 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Event.cs" />
     <Compile Include="PayPeriod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
+    <Compile Include="Tip.cs" />
     <Compile Include="TipClassification.cs" />
     <Compile Include="TipType.cs" />
   </ItemGroup>
