--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Event.cs" />
     <Compile Include="PayPeriod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reporting\TipChitDataBuilder.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Tip.cs" />
     <Compile Include="TipClassification.cs" />
