--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -46,12 +46,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reporting\ReportDefinitions.cs" />
     <Compile Include="Reporting\TipChitDataBuilder.cs" />
+    <Compile Include="Reporting\TipTypeTotal.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Tip.cs" />
     <Compile Include="TipClassification.cs" />
     <Compile Include="TipType.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Reporting\PayrollTotals.rdlc" />
     <EmbeddedResource Include="Reporting\TipChit.rdlc" />
   </ItemGroup>
   <ItemGroup />
@@ -59,6 +61,8 @@
     <None Include="Properties\DataSources\Event.datasource" />
     <None Include="Properties\DataSources\Server.datasource" />
     <None Include="Properties\DataSources\Tip.datasource" />
+    <None Include="Properties\DataSources\TipClassification.datasource" />
+    <None Include="Properties\DataSources\TipTracker.Core.Reporting.TipTypeTotal.datasource" />
     <None Include="Properties\DataSources\TipType.datasource" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
