--- a/UI.WinForms/UI.WinForms.vbproj
+++ b/UI.WinForms/UI.WinForms.vbproj
@@ -256,6 +256,7 @@
     <Compile Include="frmReportPreview.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Reporting\EventReportBuilder.vb" />
     <Compile Include="Reporting\ReportBuilder.vb" />
     <Compile Include="Reporting\TipChitBuilder.vb" />
     <Compile Include="Utilities\BusinessObjectService.vb" />
