Rename class to better represent its role in the application

--- a/UI.WinForms/UI.WinForms.vbproj
+++ b/UI.WinForms/UI.WinForms.vbproj
@@ -261,7 +261,7 @@
     <Compile Include="Reporting\TipChitBuilder.vb" />
     <Compile Include="Reporting\TipsByDateBuilder.vb" />
     <Compile Include="Reporting\TipsByServerBuilder.vb" />
-    <Compile Include="Utilities\BusinessObjectService.vb" />
+    <Compile Include="Utilities\PayPeriodObjectService.vb" />
     <Compile Include="Utilities\EventObjectStore.vb" />
     <Compile Include="Utilities\GlobalFileDialogOptions.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
