Add utility class to create server lookup strings to display in the UI

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Tip.cs" />
     <Compile Include="TipClassification.cs" />
     <Compile Include="TipType.cs" />
+    <Compile Include="UI\ServerLookupValues.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Reporting\EventDetail.rdlc" />
