Update bindings for special function combo box

--- a/UI.WinForms/UI.WinForms.vbproj
+++ b/UI.WinForms/UI.WinForms.vbproj
@@ -390,6 +390,7 @@
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
     </None>
+    <None Include="My Project\DataSources\TipTracker.Core.Event.datasource" />
     <None Include="My Project\DataSources\TipTracker.Core.Server.datasource" />
     <None Include="My Project\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
