Rename Event class
Event or Function accurately describe the class, but are reserved keywords in Visual basic, so the class needs to be renamed to avoid confusion.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Event.cs" />
+    <Compile Include="SpecialEvent.cs" />
     <Compile Include="IDataStore.cs" />
     <Compile Include="PayPeriod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
